--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <section>
     <h2>What are we doing</h2>
     <ul>
-      <li><img src="./images/imac.jpg" alt="Computer" width="360"></li>
-      <li><img src="./images/ios.jpg" alt="Operating System" width="360"></li>
-      <li><img src="./images/iphone.jpg" alt="Ecosystem" width="360"></li>
+      <li><img src="./images/imac.jpg" alt="Desktop applications" width="360"></li>
+      <li><img src="./images/ios.jpg" alt="Mobile applications" width="360"></li>
+      <li><img src="./images/iphone.jpg" alt="Design solutions" width="360"></li>
     </ul>
   </section>
 
